Fix info alignment

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -94,9 +94,10 @@
     .display-flex();
     .justify-content(space-between);
     .align-items(flex-end);
+    padding-bottom: 4px;
 
     h2 {
-      margin: 15px 0 5px;
+      margin: 15px 0 0;
       display: inline-block;
       font-size: 16px;
     }
